// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tokenizer.getDocgenCode should generate code for file with 1 function 1`] = `
"
try {
  bytesToText.__docgenInfo = {
  \\"displayName\\": \\"bytesToText\\",
  \\"description\\": \\"Convert numeric bytes to a rounded number with label\\",
  \\"props\\": [
    {
      \\"description\\": \\"The number of bytes\\",
      \\"required\\": true,
      \\"type\\": {
        \\"name\\": \\"Number\\"
      }
    },
    {
      \\"description\\": \\"The decimal precision or \\\\\\"auto\\\\\\"\\",
      \\"required\\": true,
      \\"type\\": {
        \\"name\\": \\"Number|String\\"
      }
    }
  ],
  \\"javadoc\\": {
    \\"ignore\\": false,
    \\"name\\": \\"bytesToText\\",
    \\"description\\": \\"Convert numeric bytes to a rounded number with label\\",
    \\"access\\": \\"public\\",
    \\"chainable\\": null,
    \\"deprecated\\": null,
    \\"examples\\": [
      {
        \\"language\\": \\"js\\",
        \\"description\\": \\"\\",
        \\"type\\": \\"javadoc\\",
        \\"text\\": \\"bytesToText(23 * 1024 + 35); // 23.4 KB\\"
      }
    ],
    \\"params\\": [
      {
        \\"type\\": \\"Number\\",
        \\"name\\": \\"bytes\\",
        \\"description\\": \\"The number of bytes\\",
        \\"required\\": true,
        \\"properties\\": []
      },
      {
        \\"type\\": \\"Number|String\\",
        \\"name\\": \\"precision\\",
        \\"description\\": \\"The decimal precision or \\\\\\"auto\\\\\\"\\",
        \\"required\\": true,
        \\"properties\\": []
      }
    ],
    \\"returns\\": {
      \\"type\\": \\"String\\",
      \\"description\\": \\"\\",
      \\"properties\\": []
    },
    \\"version\\": null,
    \\"since\\": null,
    \\"todos\\": [],
    \\"see\\": [],
    \\"throws\\": [],
    \\"customTags\\": [],
    \\"type\\": \\"function\\",
    \\"subtype\\": null,
    \\"canAddDocgen\\": true,
    \\"signature\\": \\"bytesToText(bytes, precision = 'auto') ⇒ {String}\\"
  }
};
} catch (e) {}"
`;

exports[`Tokenizer.getDocgenCode should generate code for file with 2 functions 1`] = `
"
try {
  random.__docgenInfo = {
  \\"displayName\\": \\"random\\",
  \\"description\\": \\"Return a random integer between min and max inclusive\\",
  \\"props\\": [
    {
      \\"description\\": \\"The lowest possible integer\\",
      \\"required\\": true,
      \\"type\\": {
        \\"name\\": \\"Number\\"
      }
    },
    {
      \\"description\\": \\"The highest possible integer\\",
      \\"required\\": true,
      \\"type\\": {
        \\"name\\": \\"Number\\"
      }
    }
  ],
  \\"javadoc\\": {
    \\"ignore\\": false,
    \\"name\\": \\"random\\",
    \\"description\\": \\"Return a random integer between min and max inclusive\\",
    \\"access\\": \\"public\\",
    \\"chainable\\": null,
    \\"deprecated\\": null,
    \\"examples\\": [],
    \\"params\\": [
      {
        \\"type\\": \\"Number\\",
        \\"name\\": \\"min\\",
        \\"description\\": \\"The lowest possible integer\\",
        \\"required\\": true,
        \\"properties\\": []
      },
      {
        \\"type\\": \\"Number\\",
        \\"name\\": \\"max\\",
        \\"description\\": \\"The highest possible integer\\",
        \\"required\\": true,
        \\"properties\\": []
      }
    ],
    \\"returns\\": {
      \\"type\\": \\"Number\\",
      \\"description\\": \\"\\",
      \\"properties\\": []
    },
    \\"version\\": null,
    \\"since\\": null,
    \\"todos\\": [],
    \\"see\\": [],
    \\"throws\\": [],
    \\"customTags\\": [],
    \\"type\\": \\"function\\",
    \\"subtype\\": null,
    \\"canAddDocgen\\": true,
    \\"signature\\": \\"random(min, max) ⇒ {Number}\\"
  }
};
} catch (e) {}

try {
  random.float.__docgenInfo = {
  \\"displayName\\": \\"random.float\\",
  \\"description\\": \\"Return a random float between min and max exclusive\\",
  \\"props\\": [
    {
      \\"description\\": \\"The lowest possible value\\",
      \\"required\\": true,
      \\"type\\": {
        \\"name\\": \\"Number\\"
      }
    },
    {
      \\"description\\": \\"The highest possible value\\",
      \\"required\\": true,
      \\"type\\": {
        \\"name\\": \\"Number\\"
      }
    }
  ],
  \\"javadoc\\": {
    \\"ignore\\": false,
    \\"name\\": \\"random.float\\",
    \\"description\\": \\"Return a random float between min and max exclusive\\",
    \\"access\\": \\"public\\",
    \\"chainable\\": null,
    \\"deprecated\\": null,
    \\"examples\\": [],
    \\"params\\": [
      {
        \\"type\\": \\"Number\\",
        \\"name\\": \\"min\\",
        \\"description\\": \\"The lowest possible value\\",
        \\"required\\": true,
        \\"properties\\": []
      },
      {
        \\"type\\": \\"Number\\",
        \\"name\\": \\"max\\",
        \\"description\\": \\"The highest possible value\\",
        \\"required\\": true,
        \\"properties\\": []
      }
    ],
    \\"returns\\": {
      \\"type\\": \\"Number\\",
      \\"description\\": \\"\\",
      \\"properties\\": []
    },
    \\"version\\": null,
    \\"since\\": null,
    \\"todos\\": [],
    \\"see\\": [],
    \\"throws\\": [],
    \\"customTags\\": [],
    \\"type\\": \\"function\\",
    \\"subtype\\": \\"variable\\",
    \\"canAddDocgen\\": true,
    \\"signature\\": \\"random.float(min, max) ⇒ {Number}\\"
  }
};
} catch (e) {}"
`;
